introduce sending and parsing weather with basic randomisation and validation

--- a/baloon-consumer/src/main/resources/application.properties
+++ b/baloon-consumer/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-
+logging.level.test.task.baloon.consumer.utils.WeatherParser: DEBUG
+logging.level.test.task.baloon.consumer.BaloonDataReceiver: DEBUG
