--- a/baloon-consumer/src/main/resources/application.properties
+++ b/baloon-consumer/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-logging.level.test.task.baloon.consumer.utils.WeatherParser: DEBUG
-logging.level.test.task.baloon.consumer.BaloonDataReceiver: DEBUG
+logging.level.test.task.baloon.consumer.weather.utils.WeatherParser: DEBUG
+logging.level.test.task.baloon.consumer.weather.BaloonDataReceiver: DEBUG
