add a service to calculate the statistics

--- a/baloon-consumer/src/main/resources/application.properties
+++ b/baloon-consumer/src/main/resources/application.properties
@@ -1,2 +1,3 @@
-logging.level.test.task.baloon.consumer.weather.utils.WeatherParser: DEBUG
-logging.level.test.task.baloon.consumer.weather.BaloonDataReceiver: DEBUG
+#logging.level.test.task.baloon.consumer.weather.utils.WeatherParser: DEBUG
+#logging.level.test.task.baloon.consumer.weather.BaloonDataReceiver: DEBUG
+logging.level.test.task.baloon.consumer.statistics.StatisticsServiceImpl: DEBUG
