--- a/baloon-consumer/src/main/resources/application.properties
+++ b/baloon-consumer/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 #logging.level.test.task.baloon.consumer.weather.utils.WeatherParser: DEBUG
 #logging.level.test.task.baloon.consumer.weather.BaloonDataReceiver: DEBUG
 logging.level.test.task.baloon.consumer.statistics.StatisticsServiceImpl: DEBUG
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:testdb
